# hf-courses

./: .gitignore  README.md  example.py  pyproject.toml  unit1.ipynb
examples/: ddpm_2d_toy.py  jax-figure.py
notebooks/colab/hf_courses/DeepRL/: lunar_lander.ipynb
notebooks/hf_courses/transformer/: examples.ipynb
src/hf_courses/: __init__.py
src/hf_courses/transformer/: main.py
